Fixed layout issue with Driver.fxml.

--- a/src/github/Tuesday_at_4/REBU/Style.css
+++ b/src/github/Tuesday_at_4/REBU/Style.css
@@ -22,13 +22,14 @@ GridPane .label {
   -fx-font-size: 16px;
 }
 
+
 .label {
   -fx-text-fill: #eeeeee;
   -fx-font-weight: bold;
 }
 
 /* Small buttons */
-#button_clearNotifications, #home_Button, #btn_signUp, #btn_login, #btnCancelAccountChanges {
+#ClearDriverNotifications, #button_clearNotifications, #home_Button, #btn_signUp, #btn_login, #btnCancelAccountChanges {
   -fx-font-size: 18px;
   -fx-font-weight: bold;
   -fx-background-color: #03DAC5;
@@ -58,7 +59,7 @@ GridPane .label {
 }
 
 /* Small labels */
-#lblRequestTime, #lblRequestDate, #lblLoginUsername, #lblLoginPassword, #lblNewUser {
+#lblRequestTime, #lblRequestDate, #lblLoginUsername, #lblLoginPassword, #lblNewUser, #lblPassengerNotifications, #lblDriverNotifications {
   -fx-font-size: 18px;
 }
 
